2.GKE/GKE_Networking/demo_labs_k8s_services/hello-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      run: hello-v2
  template:
    metadata:
      labels:
        run: hello-v2
        name: hello-v2
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:2.0
          name: hello-v2
          ports:
            - containerPort: 8080
              protocol: TCP
