2.GKE/GKE_Networking/demo_labs_k8s_services/hello-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-lb-svc
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.10.10
  selector:
    name: hello-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
