2.GKE/GKE_Networking/demo_labs_k8s_services/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    name: hello-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
