2.GKE/GKE_Networking/demo_labs_k8s_services/hello-ingress.yaml
apiVersion: app/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"

spec:
  rules:
    - http:
        Paths:
        - path: /v1
            backend:
              serviceName: hello-svc
              servicePort: 80
        - path: /v2
          backend:
            serviceName: hello-lb-svc
            servicePort: 80
